--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
 	top: 0;
 	position: fixed;
 	background: rgba(0,0,0,.9);
+	z-index: 5;
 	width:100%;
 	margin: 0;
 	transition: all ease .7s;
